# reviewate

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json
backend/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  config.py  generate_openapi.py  options.py  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 2025-11-01_3da13141aefc.py  2025-12-01_4854079ed6bc.py  2025-12-03_9fa82dbfc1d2.py  2025-12-08_92d3e1c64fbd.py  2025-12-15_add_container_id.py  2025-12-18_add_settings_fields.py  2025-12-19_platform_usernames.py  2025-12-20_provider_identity_refactor.py  2026-02-02_add_linked_repositories.py  2026-02-03_add_feedback_tables.py  2026-02-03_remove_explicit_guidelines.py  2026-02-05_add_avatar_url.py  2026-02-18_add_onboarding_step_to_users.py  2026-02-18_replace_include_summary_with_trigger.py  2026-02-19_add_workflow_to_executions.py  2026-02-21_add_error_fields_to_executions.py  2026-02-25_change_summary_trigger_default_to_label.py
backend/api/: __init__.py  app.py  constants.py  context.py  errors.py  oauth.py  schemas.py  security.py  utils.py
backend/api/database/: __init__.py  base.py  execution.py  feedback.py  identity.py  linked_repository.py  organization.py  pull_request.py  repository.py  team_guidelines.py  user.py
backend/api/jobs/: __init__.py  summarize_feedback.py
backend/api/models/: __init__.py  base.py  executions.py  feedback.py  identities.py  linked_repositories.py  organizations.py  pull_requests.py  repositories.py  team_guidelines.py  users.py
backend/api/plugins/: plugin.py  service.py
backend/api/plugins/container/: __init__.py  backend.py  config.py  docker.py  kubernetes.py  platform_comments.py  plugin.py  schema.py  status_comment.py  utils.py
backend/api/plugins/database/: __init__.py  config.py  plugin.py
backend/api/plugins/faststream/: __init__.py  config.py  dependencies.py  plugin.py
backend/api/plugins/github/: __init__.py  config.py  plugin.py
backend/api/plugins/gitlab/: __init__.py  config.py  plugin.py  schemas.py
backend/api/plugins/google/: __init__.py  config.py  plugin.py
backend/api/plugins/httpx/: __init__.py  client.py  config.py  service.py
backend/api/plugins/oauth/: __init__.py  config.py  plugin.py
backend/api/plugins/sentry/: __init__.py  config.py  plugin.py
backend/api/plugins/web/: __init__.py  config.py  plugin.py
backend/api/routers/: base_schema.py
backend/api/routers/auth/: __init__.py  consumer.py  dependencies.py  enums.py  handlers.py  jwt.py  schemas.py  utils.py
backend/api/routers/config/: __init__.py  handlers.py  schemas.py
backend/api/routers/linked_repositories/: __init__.py  handlers.py  schemas.py  utils.py
backend/api/routers/organizations/: __init__.py  consumer.py  dependencies.py  handlers.py  schemas.py
backend/api/routers/pull_requests/: __init__.py  consumer.py  dependencies.py  handlers.py  schemas.py
backend/api/routers/queue/: __init__.py  consumer.py  schemas.py
backend/api/routers/repositories/: __init__.py  consumer.py  dependencies.py  handlers.py  schemas.py
backend/api/routers/sources/: __init__.py  handlers.py  schemas.py
backend/api/routers/sources/github/: __init__.py  handlers.py  schemas.py
backend/api/routers/sources/gitlab/: __init__.py  consumer.py  handlers.py  schemas.py  utils.py
backend/api/routers/webhooks/: __init__.py  utils.py
backend/api/routers/webhooks/github/: __init__.py  consumer.py  dependencies.py  feedback.py  handlers.py  installations.py  pull_requests.py  schemas.py
backend/api/routers/webhooks/gitlab/: __init__.py  dependencies.py  feedback.py  handlers.py  merge_requests.py  schemas.py
backend/api/sse/: __init__.py  manager.py  publishers.py  schemas.py  streaming.py
backend/configs/: docker.yaml  kubernetes.yaml
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_security.py
backend/tests/api/auth/: test_dependencies.py  test_jwt.py
backend/tests/api/plugins/: test_github_plugin.py
backend/tests/api/plugins/container/: __init__.py  conftest.py  test_docker_backend.py  test_kubernetes_backend.py  test_platform_comments.py  (+2 more)
backend/tests/api/routers/: test_auth.py  test_consumer.py  test_github_webhooks.py  test_gitlab_webhooks.py  test_organization_settings.py  test_organizations.py  test_pull_requests.py  test_repositories.py  test_repository_settings.py  test_sources.py
backend/tests/api/sse/: test_publishers.py
backend/tests/static/: test_config.yaml
backend/tests/utils/: app.py  auth.py  database.py  factories.py  security.py  services.py
code_reviewer/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  __init__.py  cli.py  config.py  config_file.py  diffn.py  errors.py  guardrail.py  logging_config.py  main.py  output.py  pyproject.toml  runner.py
code_reviewer/adaptors/: diff_filter.py
code_reviewer/adaptors/repository/: __init__.py  handler.py  schema.py
code_reviewer/adaptors/repository/github/: handler.py  schema.py
code_reviewer/adaptors/repository/gitlab/: handler.py  schema.py
code_reviewer/agents/: __init__.py  analyzer.py  base.py  deduplicator.py  fact_checker.py  issue_explorer.py  post_fixer.py  styler.py  summary.py  summary_parser.py  synthesizer.py
code_reviewer/docs/: adr-fact-checker-paradigm.md  environment-variables.md
code_reviewer/hooks/: tool_budget.py
code_reviewer/prompts/: analyze.md  dedup.md  fact-check.md  issue-explorer.md  style.md  summarizer.md  summary-parser.md  summary-template.md  synthesize.md
code_reviewer/tests/: test_base_agent.py  test_config.py  test_guardrail.py  test_output.py  test_posting.py  test_review_agent.py  test_runner.py
code_reviewer/workflows/: __init__.py  context.py  schema.py
code_reviewer/workflows/review/: __init__.py  runner.py  schema.py  utils.py
code_reviewer/workflows/summary/: __init__.py  runner.py  schema.py
(+180 files in other folders)
