[project]
name = "reviewate"
version = "1.0.1" # x-release-please-version
description = "An open-source AI-powered code review system using multi-agent LLM workflows"
authors = [{ name = "Reviewate Contributors" }]
readme = "README.md"
requires-python = ">=3.14"
license = "AGPL-3.0"
keywords = ["code-review", "ai", "llm", "github", "gitlab", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]

dependencies = [
    # Web Framework
    "fastapi==0.135.3",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.2.1",
    # Database (PostgreSQL with queue support)
    "alembic>=1.17.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.44",
    # Queue Backend (FastStream with Redis)
    "faststream[redis]>=0.5.0",
    "redis>=7.0.1",
    # HTTP Client
    "httpx>=0.27.0",
    # LLM Integration
    "litellm>=1.40.0",
    # Container Runtime (Docker/K8s)
    "aiodocker>=0.23.0",
    "kr8s>=0.20.0",
    # Authentication (OAuth + JWT)
    "authlib>=1.3.0",
    "pyjwt[crypto]>=2.8.0",
    "itsdangerous>=2.1.2",
    # Rust Integration
    "maturin>=1.7.0",
    # Monitoring & Observability
    "prometheus-client>=0.21.0",
    "sentry-sdk>=2.43.0",
    # Configuration
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.2",
    # Utilities
    "typer>=0.12.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
# Git Platform Integrations (choose what you need)
github = ["pygithub>=2.4.0"]
gitlab = ["python-gitlab>=4.10.0"]
all-platforms = ["reviewate[github,gitlab]"]

# Queue Backends (Kafka for enterprise)
kafka = ["kafka-python>=2.0.2"]

# Development Tools
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",          # For TestClient

    # Linting & Formatting
    "ruff>=0.15.4",
    "mypy>=1.19.1",

    # Type Stubs
    "types-redis>=4.6.0",
    "types-pyyaml>=6.0.12",

    # Git Hooks
    "pre-commit>=4.0.0",

    # Development
    "ipython>=8.29.0",
    "ipdb>=0.13.13",
]

# Convenience meta-packages
all = ["reviewate[all-platforms,kafka]"]

[project.scripts]
reviewate = "reviewate.cli:app"

[project.urls]
Homepage = "https://github.com/numberly/reviewate"
 Documentation = "https://reviewate.com/docs"
Repository = "https://github.com/numberly/reviewate"
"Bug Tracker" = "https://github.com/numberly/reviewate/issues"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["api"]
exclude = ["tests*"]

# Ruff Configuration
[tool.ruff]
target-version = "py314"
line-length = 100
fix = true

lint.select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "RUF",   # Ruff-specific rules
    "ASYNC", # flake8-async
]
lint.ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "UP007", # Use X | Y for type annotations (pydantic compatibility)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]          # Unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S101"] # Pytest uses assertions
"*" = ["RUF022", "RUF012"]        # Module level import not at top of file
"*/routers/*.py" = ["ARG001"]     # Module level import not at top of file
"*/api/models/*.py" = ["RUF012"]  # SQLAlchemy models

[tool.ruff.lint.isort]
known-first-party = ["reviewate"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy Configuration
[tool.mypy]
python_version = "3.14"
strict = true
pretty = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
allow_redefinition = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic.mypy"]
mypy_path = "$MYPY_CONFIG_FILE_DIR"
namespace_packages = true
explicit_package_bases = true
local_partial_types = true

exclude = "^(tests|docs|venv|env|scripts)/"

[[tool.mypy.overrides]]
module = ["kafka.*", "maturin.*", "prometheus_client.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=api",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
    # Ignore polyfactory warning about Pydantic v1 compatibility with Python 3.14+
    "ignore:Core Pydantic V1 functionality isn't compatible:UserWarning:polyfactory.factories.pydantic_factory",
    # Ignore websockets deprecation warnings from uvicorn (external dependency)
    "ignore:websockets.legacy is deprecated:DeprecationWarning:websockets.legacy",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning:uvicorn.protocols.websockets.websockets_impl",
    # Ignore kr8s vendored asyncache deprecation (fixed in Python 3.16)
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning:kr8s._vendored.asyncache",
]

# Coverage Configuration
[tool.coverage.run]
source = ["api"]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[dependency-groups]
dev = [
    "faker>=37.12.0",
    "polyfactory>=2.22.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
